syntax = "proto3";

service UserService{
    rpc getUserInfo(UserIdRequest) returns (UserResponse);
    rpc getUsers(Empty) returns (UsersResponse);
    rpc getUserFriendRequests(UserIdRequest) returns (FriendRequestResponse);
}

message Empty{
}

message UserInfo{
    string id = 1;
    string email = 2;
    string username = 3;
    repeated UserInfo friends = 4;
}

message UserIdRequest{
    string userid = 1;
}

message UserResponse{
    int32 error = 1;
    string message = 2;
    UserInfo user = 3;
}

message UsersResponse{
    int32 error = 1;
    string message = 2;
    repeated UserInfo users = 3;
}

message FriendRequest{
    UserInfo user = 1;
    string note = 2;
    string id = 3;
}

message FriendRequestResponse{
    int32 error = 1;
    string message = 2;
    repeated FriendRequest requests = 4;
}